--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "react-toastify": "^10.0.5"
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
